/*
 * Copyright 2018 Loopring Foundation
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

option java_multiple_files = true;
package io.lightcone.cmc;

import "persistence.proto";

message CMCTickerData {
    int32 id = 1;
    string name = 2; // Bitcoin
    string symbol = 3; // BTC
    string slug = 4; // bitcoin
    double circulating_supply = 5;
    double total_supply = 6;
    double max_supply = 7;
    string date_added = 8;
    int32 num_market_pairs = 9;
    int32 cmc_rank = 10;
    string last_updated = 11;
    map<string, io.lightcone.persistence.CMCTickersInUsd.Quote> quote = 12;
}

message TickerStatus {
    string timestamp = 1;
    int32 error_code  = 2;
    string error_message = 3;
    int32 elapsed = 4;
    int32 credit_count = 5;
}

message TickerDataInfo {
    TickerStatus status = 1;
    repeated CMCTickerData data = 2;
}

message CurrencyData {
    double currency = 1; //当前汇率
    int64 time_in_mill_second = 2; //当前时间
}